# softwaredev

./: README.md  main.cpp
assignment_1_1/: CMakeLists.txt  classes.cpp  classes.h  main.cpp
assignment_2_1/: CMakeLists.txt  customers.csv  func.h  main.cpp  orders.csv  products.csv  vcpkg.json
assignment_2_2/: CMakeLists.txt  main.cpp  student.h  students.json  vcpkg.json
assignment_3/: CMakeLists.txt  Circle.h  Objects.cpp  Objects.h  Rectangle.h  Size.h  main.cpp  vcpkg.json
assignment_4/: vcpkg.json
assignment_4/menus/: menu.cpp
assignment_4/utils/: utils.cpp
assignment_4_1/: CMakeLists.txt  main.cpp  school.sqlite  vcpkg.json
assignment_4_1/menus/: menu.cpp  menu.h
assignment_4_1/utils/: utils.cpp  utils.h
menus/: menu.h
utils/: utils.h
